--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,15 @@
         "symfony/console": "^5.3",
         "symfony/http-client": "^5.3"
     },
+    "require-dev": {
+        "symfony/var-dumper": "^5.3"
+    },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true
     },
     "autoload": {
         "psr-4": { "Zenstruck\\Changelog\\": "src/" }
-    }
+    },
+    "bin": ["bin/changelog"]
 }
