--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
   release:
     types: [created]
 
+env:
+  GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build-phar:
     name: Build PHAR
@@ -83,6 +86,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.3
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@2.7.0
+        with:
+          php-version: 7.4
+          coverage: none
 
       - uses: actions/download-artifact@v1
         with:
