--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,34 @@ env:
   GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
+  tests:
+    name: PHP ${{ matrix.php }} - ${{ matrix.stability }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ 7.4, 8.0 ]
+        stability: [ hightest ]
+        include:
+          - php: 7.4
+            stability: lowest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2.3.3
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@2.7.0
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: none
+
+      - name: Install dependencies
+        uses: ramsey/composer-install@v1
+        with:
+          dependency-versions: ${{ matrix.stability }}
+
+      - name: Test
+        run: vendor/bin/simple-phpunit -v
+
   build-phar:
     name: Build PHAR
     runs-on: ubuntu-latest
@@ -123,6 +151,7 @@ jobs:
       - cs-check
       - composer-validate
       - test-phar
+      - tests
     if: github.event_name == 'release'
     steps:
       - uses: actions/download-artifact@v1
