--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
         required: true
 
 env:
-  GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
 
 jobs:
   release:
