--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
     types: [created]
 
 env:
-  GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
 
 jobs:
   tests:
