--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=7.4",
         "laravel-zero/phar-updater": "^1.1.1",
         "symfony/console": "^4.4",
+        "symfony/filesystem": "^4.4",
         "symfony/http-client": "^4.4",
         "symfony/polyfill-php80": "^1.16"
     },
