--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
     types: [created]
 
 env:
-  GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
+  GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   tests:
@@ -111,6 +111,7 @@ jobs:
     name: Test PHAR
     needs:
       - build-phar
+      - tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.3
