--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": ">=7.4",
         "laravel-zero/phar-updater": "^1.1.1",
+        "symfony/cache": "^5.4",
         "symfony/console": "^5.4",
         "symfony/filesystem": "^5.4",
         "symfony/http-client": "^5.4",
