--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": ">=7.4",
+        "composer/semver": "^3.3",
         "laravel-zero/phar-updater": "^1.1.1",
         "symfony/cache": "^5.4",
         "symfony/console": "^5.4",
