--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.0",
         "composer/semver": "^3.3",
         "laravel-zero/phar-updater": "^1.1.1",
         "symfony/cache": "^5.4",
@@ -22,7 +22,8 @@
         "symfony/polyfill-php80": "^1.16"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.4",
+        "phpunit/phpunit": "^9.5",
+        "symfony/phpunit-bridge": "^6.2",
         "symfony/var-dumper": "^5.4",
         "zenstruck/console-test": "^1.0"
     },
