--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches: [1.x]
-  pull_request:
+  pull_request_target:
   release:
     types: [created]
 
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [8.0, 8.2]
+        php: [8.0, 8.1, 8.2]
     steps:
       - uses: zenstruck/.github@php-test-symfony
         with:
