fix(ci): add token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,6 +132,7 @@ jobs:
         with:
           php: 8
           key: ${{ secrets.GPG_PRIVATE_KEY }}
+          token: ${{ secrets.COMPOSER_TOKEN }}
 
   sync-with-template:
     name: Sync meta files
@@ -142,3 +143,4 @@ jobs:
       - uses: zenstruck/.github@sync-with-template
         with:
           key: ${{ secrets.GPG_PRIVATE_KEY }}
+          token: ${{ secrets.COMPOSER_TOKEN }}
