--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         php: [8.0, 8.1, 8.2]
     steps:
-      - uses: zenstruck/.github@php-test-symfony
+      - uses: zenstruck/.github/actions/php-test-symfony@main
         with:
           php: ${{ matrix.php }}
           deps: highest
@@ -28,16 +28,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2.3.3
+        uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@2.7.0
+        uses: shivammathur/setup-php@v2
         with:
           php-version: 8.0
           coverage: none
 
       - name: Install dependencies
-        uses: ramsey/composer-install@v1
+        uses: ramsey/composer-install@v3
 
       - name: Download Box
         run: wget https://github.com/box-project/box/releases/download/3.16.0/box.phar
@@ -51,7 +51,7 @@ jobs:
       - name: Compile PHAR
         run: php box.phar compile
 
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v4
         name: Upload the PHAR artifact
         with:
           name: changelog.phar
@@ -68,15 +68,15 @@ jobs:
       - tests
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2.3.3
+        uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@2.7.0
+        uses: shivammathur/setup-php@v2
         with:
           php-version: 8.0
           coverage: none
 
-      - uses: actions/download-artifact@v1
+      - uses: actions/download-artifact@v4
         with:
           name: changelog.phar
           path: .
@@ -107,7 +107,7 @@ jobs:
       - test-phar
     if: github.event_name == 'release'
     steps:
-      - uses: actions/download-artifact@v1
+      - uses: actions/download-artifact@v4
         with:
           name: changelog.phar
           path: .
@@ -125,10 +125,10 @@ jobs:
   fixcs:
     name: Run php-cs-fixer
     needs: [composer-validate, test-phar]
-    if: ${{ github.event_name == 'push' || github.event_name == 'schedule' }}
+    if: (github.event_name == 'push' || github.event_name == 'schedule') && !startsWith(github.ref, 'refs/tags') && github.repository_owner == 'zenstruck'
     runs-on: ubuntu-latest
     steps:
-      - uses: zenstruck/.github@php-cs-fixer
+      - uses: zenstruck/.github/actions/php-cs-fixer@main
         with:
           php: 8
           key: ${{ secrets.GPG_PRIVATE_KEY }}
@@ -137,10 +137,10 @@ jobs:
   sync-with-template:
     name: Sync meta files
     needs: [composer-validate, test-phar]
-    if: ${{ github.event_name == 'push' || github.event_name == 'schedule' }}
+    if: (github.event_name == 'push' || github.event_name == 'schedule') && !startsWith(github.ref, 'refs/tags') && github.repository_owner == 'zenstruck'
     runs-on: ubuntu-latest
     steps:
-      - uses: zenstruck/.github@sync-with-template
+      - uses: zenstruck/.github/actions/sync-with-template@main
         with:
           key: ${{ secrets.GPG_PRIVATE_KEY }}
           token: ${{ secrets.COMPOSER_TOKEN }}
